--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,16 @@ a {
 .hero {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/office.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
 }
 .hero-title {
   font-size: 56px;
@@ -145,6 +155,7 @@ a {
   cursor: pointer;
   margin: 0 auto;
   margin-top: 48px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .title-button:hover,
 .title-button:focus {
@@ -169,6 +180,16 @@ a {
 .info-section-text {
   display: flex;
   gap: 24px;
+}
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 .info-title {
   font-weight: 500;
@@ -211,6 +232,8 @@ a {
   background-color: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .our-team-list {
   font-weight: 500;
@@ -230,6 +253,33 @@ a {
 }
 .team-name {
   padding: 32px 0;
+}
+.team-social {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.team-social-icons {
+  width: 40px;
+  height: 40px;
+}
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-social-link:hover,
+.team-social-link:fokus {
+  background-color: #404bbf;
+}
+.team-icon {
+  fill: #f4f4fd;
 }
 .portfolio-hero {
   padding-top: 120px;
