--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link:hover,
-.team-social-link:fokus {
+.team-social-link:focus {
   background-color: #404bbf;
 }
 .team-icon {
