--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ a {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.o-text:hover {
+.portfolio-info:hover {
   transform: translateY(0%);
 }
 .o-text {
