--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ a {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.portfolio-info:hover {
+.portfolio-info:hover .o-text {
   transform: translateY(0%);
 }
 .o-text {
@@ -352,7 +352,16 @@ a {
   background: #2e2f42;
   padding: 100px 0;
 }
-
+.container-footer {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+  display: flex;
+  align-items: baseline;
+}
+.footer-section-first {
+  margin-right: 120px;
+}
 .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -372,4 +381,37 @@ a {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+.footer-second-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-second-item {
+  display: flex;
+  gap: 16px;
+}
+.footer-item-list {
+  width: 40%;
+  height: 40%;
+}
+.footer-icon {
+  fill: #f4f4fd;
+}
+.footer-item-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
 }
