--- a/css/styles.css
+++ b/css/styles.css
@@ -395,8 +395,8 @@ a {
   gap: 16px;
 }
 .footer-item-list {
-  width: 40%;
-  height: 40%;
+  width: 40px;
+  height: 40px;
 }
 .footer-icon {
   fill: #f4f4fd;
@@ -411,7 +411,7 @@ a {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-icon-link:hover,
-.footer-icon-link:focus {
+.footer-item-link:hover,
+.footer-item-link:focus {
   background-color: #31d0aa;
 }
