--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 8px;
 }
 .team-name {
   padding: 32px 0;
